# hiwin_ros

./: LICENCE  LICENSE  README.md
examples/: CMakeLists.txt  package.xml
examples/scripts/: pick_and_place.py
hiwin_driver/: CMakeLists.txt  README.md  package.xml
hiwin_driver/include/hiwin_gripper_sdk/: EG_Control_API.h
hiwin_driver/include/hiwin_robot_sdk/: HRSDK.h
hiwin_driver/launch/: hiwin_gripper_interface.launch  hiwin_robot_interface.launch
hiwin_driver/script/: gripper_driver.py  hiwin_gripper_interface.py  hiwin_robot_interface.py  robot_driver.py
hiwin_ra605_710_gb_support/: CMakeLists.txt  package.xml
hiwin_ra605_710_gb_support/launch/: load_ra605_710_gb.launch  robot_state_visualize_ra605_710_gb.launch
hiwin_ra605_710_gb_support/meshes/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra605_710_gb_support/meshes/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra605_710_gb_support/urdf/: ra605_710_gb.xacro  ra605_710_gb_macro.xacro
hiwin_ra610_1355_gb_support/: CMakeLists.txt  package.xml
hiwin_ra610_1355_gb_support/launch/: robot_state_visualize_ra610_1355_gb.launch
hiwin_ra610_1355_gb_support/meshes/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra610_1355_gb_support/meshes/visual/: base_link.stl  link_2.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra610_1355_gb_support/urdf/: ra610_1355_gb.xacro  ra610_1355_gb_macro.xacro
hiwin_ra620_1621_support/: CMakeLists.txt  package.xml
hiwin_ra620_1621_support/launch/: load_ra620_1621.launch  robot_state_visualize_ra620_1621.launch
hiwin_ra620_1621_support/meshes/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra620_1621_support/meshes/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
hiwin_ra620_1621_support/urdf/: ra620_1621.xacro  ra620_1621_macro.xacro
hiwin_robot_moveit_config/: CMakeLists.txt  package.xml
hiwin_robot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
hiwin_robot_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch  hiwin_robot_moveit_controller_manager.launch  move_group.launch  ompl_planning_pipeline.launch  planning_context.launch  rviz.launch  rviz_configs.rviz  start_planning.launch  trajectory_execution.launch
hiwin_robot_moveit_config/srdf/: hiwin_robot.srdf
hiwin_robot_moveit_config/xacros/: hiwin_robot_and_gripper.xacro
hiwin_xeg_16_support/: CMakeLists.txt  package.xml
hiwin_xeg_16_support/meshes/collision/: finger_2.stl  wrist.stl
hiwin_xeg_16_support/meshes/visual/: finger_1.stl  wrist.stl
hiwin_xeg_16_support/urdf/: xeg_16.xacro  xeg_16_macro.xacro
hiwin_xeg_32_support/: CMakeLists.txt  package.xml
hiwin_xeg_32_support/meshes/collision/: finger_1.stl  finger_2.stl  wrist.stl
hiwin_xeg_32_support/meshes/visual/: finger_1.stl  finger_2.stl  wrist.stl
hiwin_xeg_32_support/urdf/: xeg_32.xacro  xeg_32_macro.xacro
hiwin_xeg_64_support/: CMakeLists.txt  package.xml
hiwin_xeg_64_support/meshes/collision/: finger_1.stl  finger_2.stl  gripper_support.stl  wrist.stl
hiwin_xeg_64_support/meshes/visual/: finger_1.stl  finger_2.stl  gripper_support.stl  wrist.stl
hiwin_xeg_64_support/urdf/: xeg_64.xacro  xeg_64_macro.xacro
