<?xml version="1.0"?>
<package>
  <name>examples</name>
  <version>1.0.1</version>
  <description>The hiwin_driver package</description>

  <maintainer email="giovanniventilii@hiwin.tw">Giovanni Ventilii</maintainer>

  <license>BSD-3-Clause</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
