<?xml version="1.0"?>
<package>
  <name>hiwin_xeg_32_support</name>
  <version>1.0.1</version>
  <description>ROS-I support package for HIWIN's XEG32 gripper</description>

  <maintainer email="giovanniventilii@hiwin.tw">Giovanni Ventilii</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>